--- a/ambient-menu.html
+++ b/ambient-menu.html
@@ -1,30 +1,39 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><style> table, td {border: 1px solid black;border-collapse: collapse; font-size:18px; font-weight: bold;background-color:LightCyan;} </style><style>th {border: 1px solid black;border-collapse: collapse;background-color:LightSkyBlue;}</style></head><table width=90%>
-<tr><th>SRDCOVKA</th></tr>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- saved from url=(0075)file:///C:/Users/radek.klasterka/AppData/Local/Temp/daily_menu_summary.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Lunch menu</title><style> table, td {border: 1px solid black;border-collapse: collapse; font-size:18px; font-weight: bold;background-color:LightCyan;} </style><style>th {border: 1px solid black;border-collapse: collapse;background-color:LightSkyBlue;}</style></head><body><table width="90%">
+<tbody><tr><th>SRDCOVKA (http://www.jidelnasrdcovka.cz)</th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Čtvrtek, 05. 08. 2021</h5>
+<h5>Úterý, 10. 08. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a kuřecím masem</strong>
+<strong>Naši milí strávníci. V období 18.8.- 20.8. si bere Aduš &amp; Honzík čas na odpočinek a relax, proto bude NAŠE/VAŠE jídelna ZAVŘENA, z důvodu ,,DOVOLENÉ” . DĚKUJEME ZA POCHOPENÍ</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							0,-
+						</span>
+</p>
+<p>
+<strong>Polévka z červené řepy</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažený hermelin s hranolkami a tatarkou</strong>
+<strong>Smažený provensálský Vepřový řízek se šťouchaným bramborem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>pečené kuřecí stehno na tymiánu s grilovanou kořenovou zeleninou s pečeným bramborem</strong>
+<strong>Caesar salát s kuřecím masem, krutony a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
@@ -44,127 +53,129 @@
 </div>
 </td>
 </tr>
-<tr><th>LEDARNY</th></tr>
+<tr><th>LEDARNY (https://www.senkyrna.cz/senkyrna-na-ledarnach)</th></tr>
 <tr>
 <td>
-<table class="table"><table class="table">
+<table class="table"></table><h5 class="border_box_title">Polévky</h5><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový smetanový krém s krutóny a šlehačkou</td><td class="menuPrice">37,-</td></tr></tbody>
-</table><table class="table">
+<tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami&nbsp;</td><td class="menuPrice">37,-</td></tr></tbody>
+</table><h5 class="border_box_title">Hlavní jídla</h5><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Rizoto z vepřového masa se zeleninou a houbami, strouhaný sýr, kyselá okurka</td><td class="menuPrice">109,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené šunkofleky s uzeným masem, smetanou a vejci, kyselá okurka</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem, hořčice, cibule  </td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, celerové pyré se sýrem, grilované rajče, vaječná roláda s anglickou slaninou, strouhaný parmazán</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitíkem, tatarka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Biftek z pravé hovězí svíčkové s jemnou pepřovou omáčkou, restované špecle </td><td class="menuPrice">209,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná kuřecími stripsy, zeleninou, ledovým salátem, rukolou a mexickým dresinkem, smažené bramborové plátky, česnekový dip</td><td class="menuPrice">149,-</td></tr></tbody>
-</table><table class="table">
+<tr><td class="menuWeight">TOP:</td><td class="menuName">Pečený anglický rostbíf z hovězí roštěné na pepřové redukci, pečené brambory s kmínem, hořčice, cibule, volské oko</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na slanině, dušená rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová kaše, esa párky z řeznictví Píša (94% masa), kyselá okurka, škvarky s cibulí&nbsp;</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený sýr (45%) vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine carbonara, plátkovaná vepřová panenka, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou s grilovanou zeleninou, smažené celerové hranolky, volské oko&nbsp;</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na omáčce z modrého sýra, restované špecle</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buritos z mletého masa s kukuřicí a fazolkami v pšeničné tortile se sýrem, bramborové hranolky, zakysaná smetana</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstovinový salát se zeleninou promíchaný majonézovým dresinkem, plátkovaná kuřecí prsa, vařené vejce</td><td class="menuPrice">129,-</td></tr></tbody>
+</table><h5 class="border_box_title">Instagram od 15:00 do 19:00</h5><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram od 15:00 do 19:00</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Sleduješ nás na instagramu? Pokud ano, tak můžeš denně od 15:00 do 19:00 hod. čerpat prázdninovou Šenkbombu. (Při objednání poprosíme prokázat sledování na telefonu. Jeden sledující = jedno jídlo denně za 77,-). </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z kuřecích prsou obalené v cornflakes, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové kotlety bez kosti, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">120g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr></tbody>
-</table><table class="table">
+<tr><td class="menuWeight">Insta gram</td><td class="menuName">Sleduješ nás na instagramu? Pokud ano, tak můžeš denně od 15:00 do 19:00 hod. čerpat prázdninovou Šenkbombu. (Při objednání poprosíme prokázat sledování na telefonu. Jeden sledující = jedno jídlo denně za 77,-).&nbsp;</td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z kuřecích prsou obalené v cornflakes, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00)&nbsp;</td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové kotlety bez kosti, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00)&nbsp;</td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">120g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka (pro sledující od 15:00 do 19:00)&nbsp;</td><td class="menuPrice">77,-</td></tr></tbody>
+</table><h5 class="border_box_title">Dezerty</h5><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo, šlehačkou a karamel</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0.4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
-</table><table class="table">
+<tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo, šlehačkou a karamel</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
+</table><h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
-</td>
-</tr>
+<tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce.&nbsp;</td><td class="menuPrice"></td></tr></tbody></table></td></tr></tbody></table>
+
+
 <table style="width:90%">
-<tr><th>Kuta</th></tr>
+<tbody><tr><th>Kuta (https://www.menicka.cz/4728-kuta-restaurace-.html)</th></tr>
 <tr>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 5.8.2021</div>
+<div class="nadpis">Úterý 10.8.2021</div>
 <ul>
 <li class="polevka">
-<div class="polozka">300ml Houbový krém s majoránkou v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="polozka">300ml Frankfurtská polévka v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
 <div class="cena">29 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Houbový krém s majoránkou samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="polozka">300ml Frankfurtská polévka samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Vepřová pečeně na rozmarýnu, dušený špenát, šťouchaný brambor s jarní cibulkou <em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">1. </span>350g Pečená žebra v BBQ omáčce, zelný salát, opečený chléb <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí špíz yakitori, jasmínová rýže, zeleninový salát s řasou wakame <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="polozka"><span class="poradi">2. </span>150g Krůtí prso, kari omáčka, marinovaná mrkev, koriandr, basmati rýže, černý sezam <em title="Mléko">7</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Plněný paprikový lusk jasmínovou rýží, zeleninou a sýrem, tomatová omáčka, variace listových salátů <em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">3. </span>300g Květákové karbanátky, opečený brambor, pažitkový dip, listový salát <em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta s pražskou šunkou/vajíčekem, sýrem a čerstvou zeleninou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">4. </span>300g Variace bavorských baget</div>
 <div class="cena">69 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>200g Šopský salát s olivami <em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>200g Ovocný salát s melounem a ananasem</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>80g Drobenkový koláč s meruňkami <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>80g Čokoládové brownie <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">5. </span>100g Mrkvový dort s vlašskými ořechy </div>
 <div class="cena">55 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">9. </span>80g Jogurtová bábovka s kokosem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
+<div class="polozka"><span class="poradi">6. </span>100g Vanilkový cheesecake</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>200g Šopský salát </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">8. </span>200g Ovocný salát</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">9. </span>200g Okurkový salát </div>
+<div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 </ul>
 </div>
 </td>
 </tr>
-</table>
+</tbody></table>
 <table style="width:90%">
-<tr><th>Mates</th></tr>
+<tbody><tr><th>Mates (https://www.mattesrestaurace.cz)</th></tr>
 <tr>
 <td>
 <table class="dm">
 <tbody>
 <tr>
 <td class="amount">300g</td>
-<td class="title">Grilovaný vepřový tomahawk se sázeným vejcem, kovbojskými fazolemi, pečenou bramborou 
+<td class="title">Grilovaný vepřový tomahawk se sázeným vejcem, kovbojskými fazolemi, pečenou bramborou 
+
 s česnekovým zákysem a pažitkou (1, 7)</td>
-<td class="pricem">289 Kč</td>
+<td class="pricem">289&nbsp;Kč</td>
 </tr>
 <tr>
 <td class="amount">300g</td>
 <td class="title">Domácí ravioli plněné krůtím ragú s houbami a ricottou se smetanovou omáčkou, s petrželkou a strouhaným sýrem parmazánového typu (1, 3, 7)</td>
-<td class="pricem">185 Kč</td>
+<td class="pricem">185&nbsp;Kč</td>
 </tr>
 <tr>
 <td class="amount">5ks</td>
 <td class="title">Naše meruňkové a švestkové knedlíky, oříškové crumble, tvarohový krém s citrusy a medem (1, 3, 7, 8c)</td>
-<td class="pricem">175 Kč</td>
+<td class="pricem">175&nbsp;Kč</td>
 </tr>
 </tbody>
 </table>
 </td>
 </tr>
-</table>
+</tbody></table>
 <table style="width:90%">
-<tr><th>RYBARNA</th></tr>
+<tbody><tr><th>RYBARNA (http://rybarna.net/denni-menu)</th></tr>
 <tr>
 <td>
-<ol><li>Thieboudienne – senegalska kulata ryze s rybimi filety {hejk, makrela, losos}, zeleninou, rajcaty a bylinkami, salatek 139</li><li>Spagety s tubami kalamaru, rimskym salatem, kaparami, ancovickami a bazalkou, citron 169</li><li>Nam prik ong – thajske restovane veprove s cestvymi rajcaty, krevetovou pastou, koriandrem, cesnekem a spetkou chilli, thajska lepkava ryze, salatek 139</li><li>Burritos se srncimi nudlickami, pecenymi palivymi paprikami, cervenymi fazolemi a chipotle chilli, pecene brambory, jogurtovy dip, salatek 169</li><li>Indicke kvetakove kari se zazvorem, kokosovym mlekem, rajcaty a jogurtem, korenena ryze s cizrnou 139</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s uzenym lososem nerka, hraskem, smetanou a koprem, salatek {L} 169</li><li>Balkanska musaka s hovezim a krutim masem, rajcaty, cuketami, lilky a bylinkami zapecena ve smetanove omacce, salatek {L} 139</li><li>Smazeny teleci sekany rizek s goudou, stouchane brambory s porkem, okurkovy salatek, citron {L} 169</li><li>Brokolicove placicky s kapustou a petrzelkou, stouchane brambory s porkem, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
-</table>
-</table></html>
+</tbody></table>
+
+</body></html>
