Update daily menu

--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 20. 08. 2021</h5>
+<h5>Sobota, 21. 08. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Naši milí strávníci. V období 18.8.- 20.8. si bere Aduš &amp; Honzík čas na odpočinek a relax, proto bude NAŠE/VAŠE jídelna ZAVŘENA, z důvodu ,,DOVOLENÉ” . DĚKUJEME ZA POCHOPENÍ</strong>
@@ -56,19 +56,25 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajčatová s oreganem a šlehačkou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Dušené hovězí roštěnky na červeném víně s kořenovou zeleninou, dušená jasmínová rýže </td><td class="menuPrice">109,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová plec na žampionech, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené těstoviny s uzeným masem, rozšlehanými vejci a smetanou, kyselá okurka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu s opečenou paprikou, grilované brambory s kmínem, česnekový dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buřtguláš s cibulí a feferonkou s brambory, rozpečený chléb</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z vepřové pečeně s chřestem gratinované sýrem, celerové pyré, grilované rajče</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine se sušeními rajčaty a kukuřicí zjemněné smetanou, filírovaná kuřecí prsa, rukola </td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené kuřecí stripsy v cornflakes, vařené brambory s máslem a šnitlíkem, mexický dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát ochucený olivovým olejem, hermelín v těstíčku, brusinkové žervé, vařené vejce</td><td class="menuPrice">129,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Sekané masové biftečky, vařené brambory s máslem a petrželkou, hořčice, cibule</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený hovězí rosbíf ,vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Drůbeží játra na tálu s pórkem, pečené brambory s kmínem, volské oko</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. 200g Vepřová roláda plněná vejci, žampiony a kapií, hráškové pyré, grilovaná karotka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné sýrové omáčce, restované špecle</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažená kuřecí kapsa plněná šunkou a sýrem, vařené brambory s máslem a petrželkou, citrón</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný ančovičkovým dresinkem s kuřecím masem a anglickou slaninou, česnekové tousty, strouhaný parmazán</td><td class="menuPrice">129,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram od 15:00 do 19:00</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Sleduješ nás na instagramu? Pokud ano, tak můžeš denně od 15:00 do 19:00 hod. čerpat prázdninovou Šenkbombu. (Při objednání poprosíme prokázat sledování na telefonu. Jeden sledující = jedno jídlo denně za 77,-). </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z kuřecích prsou obalené v cornflakes, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové kotlety bez kosti, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">120g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo, šlehačkou a karamel</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody></table></table>
 </td>
 </tr>
 <table style="width:90%">
@@ -77,59 +83,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 20.8.2021</div>
+<div class="nadpis">Sobota 21.8.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Zelná polévka s uzeným masem v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Zelná polévka s uzeným masem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí guláš na pivu, domácí bramboráčky, marinovaná červená cibule <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g Brokolicové placky s quinoou, opečený, rhode island dresink <em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>250g Bavorská bageta dle denní nabídky </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>200g Okurkový salát </div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>200g Šopský salát s olivami <em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>200g Ovocný salát </div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>100g Čokoládové brownie se skořicovým krémem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>100g Jogurtová bábovka s kokosem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -165,7 +121,7 @@ cibulkou a restovaným černým kořenem 1a,3,7,9</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Pórková s krutony 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Pikantní vepřový guláš s křenem a cibulovými kroužky s našimi bramborovými plackami 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">120g</td><td class="title">Smažený hermelín plněný šunkou s hranolky a naší tatarskou omáčkou 1a,3,7,10</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Variace trhaných salátů s grilovaným kuřecím masem, zakysanou smetanou s koriandrem a cizrnovými plackami 1a,3,7</td><td class="pricem">125 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
