--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Sobota, 21. 08. 2021</h5>
+<h5>Neděle, 22. 08. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Naši milí strávníci. V období 18.8.- 20.8. si bere Aduš &amp; Honzík čas na odpočinek a relax, proto bude NAŠE/VAŠE jídelna ZAVŘENA, z důvodu ,,DOVOLENÉ” . DĚKUJEME ZA POCHOPENÍ</strong>
@@ -59,22 +59,19 @@
 <h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pórková s rozšlehanými vejci</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Sekané masové biftečky, vařené brambory s máslem a petrželkou, hořčice, cibule</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený hovězí rosbíf ,vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Drůbeží játra na tálu s pórkem, pečené brambory s kmínem, volské oko</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. 200g Vepřová roláda plněná vejci, žampiony a kapií, hráškové pyré, grilovaná karotka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné sýrové omáčce, restované špecle</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažená kuřecí kapsa plněná šunkou a sýrem, vařené brambory s máslem a petrželkou, citrón</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný ančovičkovým dresinkem s kuřecím masem a anglickou slaninou, česnekové tousty, strouhaný parmazán</td><td class="menuPrice">129,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí roštěná na houbách, dušená jasmínová rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buřtguláš s cibulí a feferonkou s brambory, rozpečený chléb</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené holanské řízky, mačkané brambory s máslem a petrželkou, kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. 200g Steak z vepřové pečeně, salát z červené řepy s balkánským sýrem, grilované rajče, volské oko </td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřově pečeně gratinovaným sýrem a šunkou, pečené brambory s kmínem</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná vepřovou panenkou, listy salátu, zeleninou a sýrem,česnekovým  dresinkem, smažené bramborové hranolky, mexický dip</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný majonézovým dresinkem s kuřecím masem, vařené vejce</td><td class="menuPrice">132,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram od 15:00 do 19:00</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Sleduješ nás na instagramu? Pokud ano, tak můžeš denně od 15:00 do 19:00 hod. čerpat prázdninovou Šenkbombu. (Při objednání poprosíme prokázat sledování na telefonu. Jeden sledující = jedno jídlo denně za 77,-). </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z kuřecích prsou obalené v cornflakes, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové kotlety bez kosti, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">120g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 <table style="width:90%">
@@ -83,7 +80,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 21.8.2021</div>
+<div class="nadpis">Neděle 22.8.2021</div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
