--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -14,24 +14,24 @@
 						</span>
 </p>
 <p>
-<strong>Zeleninová</strong>
+<strong>Hrachová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová kotleta zapečená šunkou a sýrem s kroketami a tatarkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							137,-
-						</span>
-</p>
-<p>
-<strong>Těstoviny s tomatovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Španělský Vepřový ptáček s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
+						</span>
+</p>
+<p>
+<strong>Smažený hermelín s vařeným bramborem a tatarkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							129,-
 						</span>
 </p>
 <p>
@@ -123,7 +123,7 @@ cibulkou a restovaným černým kořenem 1a,3,7,9</td>
 <tr><th>RYBARNA (<a href="http://rybarna.net/denni-menu">http://rybarna.net/denni-menu</a>)</th></tr>
 <tr>
 <td>
-<ol><li>Thajske kari s kousky rybich filetu {hejk, halibut, makrela}, kokosovym mlekem, tamarindem a zeleninou, jasminova ryze 139</li><li>Peceny cerstvy platyz a filet z morskeho dasa s pecenymi rajcaty a tapenadou z cernych oliv, zeleninovy kuskus, salatek {L} 169</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami, chilli a garam masala, jasminova ryze, salatek 139</li><li>Spagety s nudlickami prsicek lesniho holuba, susenymi rajcaty, cuketami a parmezanem {L} 169</li><li>Zapecene cukety plnene cervenou cockou s restovanou cibulkou a rajcaty, salatek 139</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {hejk, makrela, losos} se zelenymi bylinkami, petrzelkove pesto se susenymi rajcaty a kaparami, zeleninovy kuskus, salatek {L} 139</li><li>Paella s plody more {slavky, kalamary, srdcovky}, treskou, tunakem a zeleninou, salatek 169</li><li>Thajske restovane veprove s paprikami, bazalkou, krevetovou pastou a chilli, sazene vejce, jasminova ryze, salatek 139</li><li>Grilovane medailonky z prsicek divoke kachny a  koroptve s brusinkovo-visnovou omackou, pecene brambory, salatek 169</li><li>Zapecene portobello s nadivkou z ovciho syra, goudy a kapusty, pecene brambory, salatek 139 </li></ol>
 </td>
 </tr>
 </table>
