Update daily menu

--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -14,21 +14,21 @@
 						</span>
 </p>
 <p>
-<strong>Hrachová</strong>
+<strong>Polévka z červené řepy</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Španělský Vepřový ptáček s rýží</strong>
+<strong>Kuřecí stripsy na ledovém salátku s chilli dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Smažený hermelín s vařeným bramborem a tatarkou</strong>
+<strong>Rajská hovězí pečeně s houskovým knedlíkem nebo těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
@@ -183,7 +183,7 @@ cibulkou a restovaným černým kořenem 1a,3,7,9</td>
 <tr><th>RYBARNA (<a href="http://rybarna.net/denni-menu">http://rybarna.net/denni-menu</a>)</th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {hejk, makrela, losos} se zelenymi bylinkami, petrzelkove pesto se susenymi rajcaty a kaparami, zeleninovy kuskus, salatek {L} 139</li><li>Paella s plody more {slavky, kalamary, srdcovky}, treskou, tunakem a zeleninou, salatek 169</li><li>Thajske restovane veprove s paprikami, bazalkou, krevetovou pastou a chilli, sazene vejce, jasminova ryze, salatek 139</li><li>Grilovane medailonky z prsicek divoke kachny a  koroptve s brusinkovo-visnovou omackou, pecene brambory, salatek 169</li><li>Zapecene portobello s nadivkou z ovciho syra, goudy a kapusty, pecene brambory, salatek 139 </li></ol>
+<ol><li>Peceny filet z atlanticke makrely s brokolici a jogurtovou bylinkovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Pecena cerstva islandska kambala a morsky jazyk s brokolici a jogurtovou bylinkovou omackou, korenena ryze s beluga cockou, salatek 169</li><li>Mongolske hovezi platky ve sladke omacce se zazvorem, gaj coj a sezamem, ryzove nudle  139</li><li>Italske rizoto na cervenem vine s pecenymi paprikami, parmezanem a hovezim rostbifem 169</li><li>Smazena hliva a kvetak, bramborovy salat s cerstvymi okurkami, cervenou repou, zelenymi bylinkami a majonezou {L} 139</li></ol>
 </td>
 </tr>
 </table>
