Update daily menu

--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -178,7 +178,7 @@ cibulkou a restovaným černým kořenem 1a,3,7,9</td>
 <tr><th>RYBARNA (<a href="http://rybarna.net/denni-menu">http://rybarna.net/denni-menu</a>)</th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s brokolici a jogurtovou bylinkovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Pecena cerstva islandska kambala a morsky jazyk s brokolici a jogurtovou bylinkovou omackou, korenena ryze s beluga cockou, salatek 169</li><li>Mongolske hovezi platky ve sladke omacce se zazvorem, gaj coj a sezamem, ryzove nudle  139</li><li>Italske rizoto na cervenem vine s pecenymi paprikami, parmezanem a hovezim rostbifem 169</li><li>Smazena hliva a kvetak, bramborovy salat s cerstvymi okurkami, cervenou repou, zelenymi bylinkami a majonezou {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s grilovanym citronem a ancovickovo-bylinkovym maslem, cockovy salat s paprikami, fazolemi a zelenou cibulkou 139</li><li>Peceny filet z cerstveho morskeho dasa a tresky s grilovanym citronem a ancovickovo-bylinkovym maslem, cockovy salat s paprikami, fazolemi a zelenou cibulkou 169</li><li>Lasagne s hovezim masem, rajcaty a pecenymi paprikami zapecene ve smetanove omacce, salatek {L} 139</li><li>Burritos s bazantimi gyros prsicky, rimskym salatem a rajcaty, avokadove guacamole, pecene brambory, salatek {L} 169 </li><li>Maghrebska zapecena saksuka s rajcaty, paprikami, vejci a balkanskym syrem, korenena ryze s beluga cockou, salatek 139 </li></ol>
 </td>
 </tr>
 </table>
