Update daily menu

--- a/menu/ambient-menu.html
+++ b/menu/ambient-menu.html
@@ -14,24 +14,24 @@
 						</span>
 </p>
 <p>
-<strong>Polévka z červené řepy</strong>
+<strong>Farmářská</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí stripsy na ledovém salátku s chilli dresinkem</strong>
+<strong>Kuřecí plátek s hlívou, slaninou a cibulkami s fritátovými brambůrky a hořčičnou majonézou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Rajská hovězí pečeně s houskovým knedlíkem nebo těstovinou</strong>
+<strong>Srbské vepřové rizoto se sýrem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							127,-
 						</span>
 </p>
 <p>
